--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 						<div class="profile-img"><img src="images/winda.jpg" alt=""></div>
 						<h2><b>Winda Setyareni Pratama</b></h2>
 						<h4 class="font-yellow">@windasetyarenipratama</h4>
-						<h2><a class="downlad-btn" href="https://api.whatsapp.com/send?phone=+6285243463255&text=Halo Kak Boleh tanya?">Chat Whatsapp</a></h2>
+						<h2><a class="downlad-btn" href="https://api.whatsapp.com/send?phone=+6285243463255&text=Halo kak, boleh tanya2 tentang oriflame ?">Chat Whatsapp</a></h2>
 						<h2><a class="downlad-btn" href="https://id.oriflame.com/products/digital-catalogue-current?pageNumber=1&catalogue=2020007&store=windasetyarenipratama">Katalog Oriflame</a></h2>
 					</div><!-- intro -->
 				</div><!-- col-sm-8 -->
